# paypanel-alipay

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
app/: alipay.py  auth.py  config.py  crypto.py  db.py  main.py
app/static/: style.css
app/templates/: accounts.html  base.html  dashboard.html  login.html  new_order.html  order_detail.html  orders.html  orders_table.html  settings.html
docs/: aapanel-nginx.conf
scripts/: bootstrap.sh  check_alipay_account.py  deploy.sh  install_aapanel_service.sh
tests/: test_core.py
